initial steps for the camera feed

--- a/src/pages/Thread.css
+++ b/src/pages/Thread.css
@@ -1,3 +1,15 @@
 .message-col textarea.native-textarea {
   background-color: var(--ion-color-light-tint);
 }
+
+.message-col .message-input {
+  margin-left: -0.75em;
+}
+
+.message-box-footer {
+  border-top: 0.5px solid var(--ion-color-light-shade);
+}
+
+.message-box-footer .message-form-grid {
+  padding: 8px 0;
+}
