--- a/src/pages/Sos.css
+++ b/src/pages/Sos.css
@@ -2,9 +2,11 @@
   position: absolute;
   top: 65px;
   right: 0;
-  width: 40vw;
-  height: 30vh;
+  width: 30vw;
+  height: 20vh;
   object-fit: cover;
+  border-radius: 0.8em;
+  overflow: hidden;
 }
 
 .sos-button {
