--- a/src/pages/Sos.css
+++ b/src/pages/Sos.css
@@ -1,12 +1,37 @@
 .video-stream {
   position: absolute;
-  top: 65px;
-  right: 0;
+  top: 5px;
+  right: 5px;
   width: 30vw;
   height: 20vh;
   object-fit: cover;
   border-radius: 0.8em;
   overflow: hidden;
+  z-index: 1;
+}
+
+.video-stream.recording {
+  z-index: 20;
+}
+
+.video-stream video,
+.video-stream .stream-loader {
+  width: 100%;
+  height: 100%;
+}
+
+.video-stream video {
+  object-fit: cover;
+}
+
+.video-stream.recording,
+.video-stream .stream-loader {
+  background-color: var(--ion-color-medium-shade);
+}
+
+.video-stream .stream-loader {
+  position: absolute;
+  z-index: 3;
 }
 
 .sos-button {
